<resources>
    <string name="app_name">Read Aloud</string>
    <string name="read_text_below">Read text below</string>
    <string name="speak">Speak</string>
    <string name="speak_english">Speak English</string>
    <string name="speak_polish">Speak Polish</string>
    <string name="reading_speed">Reading Speed:</string>
    <string name="open_from_application_files">Open from Application Files</string>
    <string name="sample_text">Litwo! Ojczyzno moja! Ty jesteś jak zdrowie. Ile cię stracił. Dziś piękność twą w głównym sądzie w tkackim pudermanie). Wdział więc, jak roratne świéce. Pierwsza z krzykiem podróżnego barwą spłonęła rumian jak drudzy i psy za nim</string>
    <string name="error_creating_sample_file">Error occurred, while creating sample text file.</string>
    <string name="error_cannot_load_text_from_file">Error, cannot load text from selected file.</string>
    <string name="error_tts_initialization_failed">Text To Speech initialization failed.</string>
    <string name="error_tts_lang_not_supported">Text To Speech language not supported or package missing.</string>
    <string name="open_from_asaf">Open from ASAF</string>
    <string name="error_could_not_load_text_from_selected_file">Error, could not load text from selected file.</string>
    <string name="blank" />
    <string name="external_storage">External Storage</string>
    <string name="select_file_to_read_from_app_internal_or_external_storage">Select file to read from app internal\nor external storage.</string>
</resources>
